welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:6: error: reassignment to val
	if(getCouleurSol = Color.green) {
                         ^SlugTracking:10: error: type mismatch;
 found   : Unit
 required: Boolean
	if(couleurSol = true) {
                      ^SlugTracking:11: error: type mismatch;
 found   : Unit
 required: Boolean
		avance()
                      ^SlugTracking:14: error: type mismatch;
 found   : Unit
 required: Boolean
		droite()
                      ^